# ai-agent-usage-widget

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  release.sh  zynd_registry.py
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
core/: CONTRACT.md  contract.schema.json  fetch_usage.py
core/tests/: test_cache.py  test_claude.py  test_codex.py  test_config.py  test_contract.py  test_credential_store.py  test_fetch.py  test_kimi.py  test_refresh_backoff.py
core/usage/: cache.py  claude.py  codex.py  config.py  credential_store.py  kimi.py  refresh_backoff.py
docs/: design-language.md  native-frontends-implementation.md
docs/design/: README.md  Usage Widget - Iterations.html  Usage Widget - Semantic Color.html  _ds_bundle.js  _ds_manifest.json
docs/previews/: render.sh  touchbar.html  widget.html
macwidget/: README.md  build.sh  distribute.sh  install.sh  project.yml
macwidget/App/: Info.plist  QuotaWidgetApp.swift  UsageFetcher.swift
macwidget/QuotaWidget.xcodeproj/: project.pbxproj
touchbar/: README.md  build.sh  com.quotabar.app.plist  distribute.sh  install.sh  sign_bundle.sh
usage-widget/: README.md  fetch_usage.py  gallery-screenshot.html  index.jsx  install.sh  package-widget.sh  render-screenshot.sh
windows-widget/: README.md  build.ps1  package.json  release.ps1
windows-widget/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
windows-widget/src-tauri/capabilities/: default.json
windows-widget/src-tauri/src/: fetch.rs  lib.rs  main.rs
(+59 files in other folders)
