[package]
name = "ai-agent-usage-widget"
version = "0.1.0"
description = "Windows desktop widget for AI agent usage"
authors = ["lazyfoxy33-dev"]
edition = "2024"

[lib]
name = "ai_agent_usage_widget_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ai-agent-usage-widget"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2.5.5"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-window-state = "2.4.1"
wait-timeout = "0.2"
